app/styles/main.css
.browserupgrade {
/*  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;*/
}

/* Space out content a bit */
/*body {
margin: 0%;
width:12000px;
position:absolute;
top:0px;
left:0px;
bottom:0px;
}
.section{
  margin:0px;
  bottom:0px;
  float:left;
  display:inline-block;
  height:100%;
  width:000px;
}*/
/*fullpage.js styling*/
/*#fullpage { position: fixed; overflow: automatic; } */
/*keeps navbar with page*/
.header {
  position: fixed;
  z-index: 99;
  width:100%;
}
.header h3{
  padding-left:10px;
}
.nav a{
  color:#0275d8;
}
li.active a{
  color: #fff;
  cursor: default;
  background-color: #0275d8;
  border: 1px solid blue;
  border-radius: 5px;
}
/*stylesheets for sections*/
/*#sb, #sd { background: #BEEAD7; } */
/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-right: 1rem;
  padding-left: 1rem;
}

/* Custom page header */
.header {
  padding-bottom: 1rem;
/*  border-bottom: .05rem solid #e5e5e5;*/
}

/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 3rem;
}

/* Custom page footer */
.footer {
  padding-top: 1.5rem;
  color: #777;
/*  border-top: .05rem solid #e5e5e5;*/
}

/* Customize container */
@media (min-width: 48em) {
  .container {
    max-width: 46rem;
  }
}
.container-narrow > hr {
  margin: 2rem 0;
}

/* Main marketing message and sign up button */
.container-fluid {
  width:100%;
  margin:0px;
  padding:none;
/*  border-bottom: .05rem solid #e5e5e5;*/
}
.jumbotron .btn {
  padding: .75rem 1.5rem;
  font-size: 1.5rem;
}

/* Supporting marketing content */
.marketing {
  margin: 3rem 0;
}
.marketing p + h4 {
  margin-top: 1.5rem;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 48em) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 2rem;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}
/*//////////////////////////////////////////////////////////////////////////////////////End Nav and Presets///////////////////////////////////////////////////////////////////////////////////*/
.titles h2{
  padding: 20px;
  margin-bottom:30px;

}
.titles{
  margin-bottom:60px;
}
.button{
  text-decoration: none;
  border: 1px solid #4ffc84;
  border-radius: 20px;
  color:white;
  font-weight:bold;
  background:#4ffc84;
  padding: 10px 20px 10px 20px;

}
.button:hover{
  text-decoration: none;
  color:white;
  padding: 10px 35px 10px 35px;
}
#desk{
  margin-top: 150px;
}
/*//////////////////////////////////////////////////////////////////////////////////////////////Skills Page/////////////////////////////////////////////////////////////////////////////////////*/
.col-md-4{
  display:inline-block;
  float:left;
  padding-left:100px;
}
.border{
  border:3px solid black;
  border-radius: 10px;
}
.skills{
  padding: 20px 0px 20px 20px;
}
.horizontal-bar-graph {
  display: table;
  width: 70%;
  padding:0px 0px 20px 20px;
}

.horizontal-bar-graph-segment {
  display: table-row;
}

.horizontal-bar-graph-label {
  display: table-cell;
  border-right: 1px solid silver;
  text-align: right;
  padding: 4px 10px 4px 0;
  vertical-align: baseline;
  white-space: nowrap;
}

.horizontal-bar-graph-value {
  display: table-cell;
  padding: 3px 0;
  vertical-align: baseline;
  width: 100%;
}

.horizontal-bar-graph-value-bar {
  background: silver;
  padding: 4px 4px 3px;
  height: 1em;
  text-align: right;
  color: white;
  overflow: visible;
  display: inline-block;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
}
/*/////////////////////////////////////////////////////////////////////////////Work Page/////////////////////////////////////////////////////////////////////////////////////////////*/
.thumbnail{
  padding:40px;
}
.caption{
  display:inline-block;
}
.carousel-inner .carousel-item img {
    margin: 0 auto;
}
#card1{
  border:none;
  background:none;
}
#card2{
  border:none;
  background:none;
}
#card3{
  border:none;
  background:#fff;
}

